// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should be rendered correctly 1`] = `
<div
  aria-expanded={false}
  className="uui-accordion-container container root mode-block"
>
  <div
    className="uui-accordion-toggler"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-accordion-toggle-container"
    >
      <div
        className="uui-accordion-title"
      >
        Test title
      </div>
      <div
        className="container uui-icon uui-enabled arrow"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should be rendered correctly with props 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="uui-accordion-container container uui-disabled root mode-inline padding-18"
>
  <div
    className="uui-accordion-toggler uui-disabled"
    tabIndex={-1}
  >
    <div
      className="uui-accordion-toggle-container"
    >
      <div
        className="uui-accordion-title"
      >
        Test title
      </div>
      <div
        className="container uui-icon uui-enabled uui-disabled arrow"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
  </div>
</div>
`;
